k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: texas-gas-lakehouse
  labels:
    name: texas-gas-lakehouse
    project: cagridge-lakehouse
